# bevy-playground

./: Cargo.toml
.cargo/: config.toml
board-plugin/: Cargo.toml
board-plugin/src/: bounds.rs  events.rs  lib.rs
board-plugin/src/assets/: board.rs  mod.rs
board-plugin/src/components/: coordinates.rs  mine.rs  mod.rs  neighbor.rs  uncovered.rs
board-plugin/src/resources/: board.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
board-plugin/src/systems/: create_world.rs  input.rs  mark.rs  mod.rs  uncover.rs
board-plugin/src/systems/startup/: create_world.rs  mod.rs
hello-bevy/: Cargo.toml
hello-bevy/src/: entities.rs  main.rs  plugins.rs  resources.rs  systems.rs
hello-world/: Cargo.toml
minesweeper/: Cargo.toml
minesweeper/src/: main.rs
