[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
    "hello-world",
    "hello-bevy",
    "minesweeper",
    "board-plugin",
]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1