[package]
edition = "2021"
name = "board-plugin"
version = "0.1.0"

[features]
default = []
debug = [
    "colored",
    "bevy-inspector-egui",
]

[dependencies]
rand = "0.8.5"
serde = "1.0.136"
bevy = { version = "0.6.0", features = ["dynamic"] }
colored = { version = "2.0.0", optional = true}
bevy-inspector-egui = { version = "0.8", optional = true }
