[package]
edition = "2021"
name = "hello-bevy"
version = "0.1.0"

[dependencies]
[dependencies.bevy]
version = "0.6"
default-features = false
features = ["render", "bevy_winit", "png"]

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.6"
default-features = false
features = ["x11"]