[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board-plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.6"
board-plugin = { path = "../board-plugin" }
bevy-inspector-egui = { version = "0.8", optional = true }

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1
