[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board-plugin/debug", "bevy-inspector-egui"]

[dependencies]
board-plugin = { path = "../board-plugin" }
bevy-inspector-egui = { version = "0.8", optional = true }

[dependencies.bevy]
version = "0.6"
default-features = false
features = ["render", "bevy_winit", "png"]

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.6"
default-features = false
features = ["x11"]